updated entire repo: login action and api setup complete

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 .idea/
 node_modules/
-yarn.lock
-package-lock.json
-static/dist/
+dist/
 *.iml
 webpack-assets.json
 webpack-stats.json
 npm-debug.log
 .happypack
 webpack/dlls/*.json
-api/**/*.nedb
-*.report.html
-coverage
+.scratch
+package-lock.json
 .DS_Store
+src/components/.DS_Store
+src/containers/.DS_Store
+src/redux/modules/.DS_Store
