--- a/package.json
+++ b/package.json
@@ -24,30 +24,16 @@
   ],
   "main": "bin/server.js",
   "scripts": {
-    "start": "concurrently --kill-others \"npm run start-prod\" ",
-    "start-prod": "bnr start-prod",
-    "dev": "concurrently --kill-others \"npm run watch-client\" \"npm run start-dev\"",
-    "start-dev": "bnr start-dev",
-    "watch-client": "bnr watch-client",
-    "build": "bnr build",
-    "build-dlls": "webpack --colors --display-error-details --config webpack/vendor.config.js",
+    "start": "concurrently --kill-others \"npm run start-prod\"",
+    "start-prod": "better-npm-run start-prod",
+    "build": "better-npm-run build",
+    "build-dlls": "webpack --verbose --colors --display-error-details --config webpack/vendor.config.js",
     "postinstall": "concurrently \"npm run build\" \"npm run build-dlls\"",
-    "precommit": "lint-staged",
-    "prettier": "prettier-eslint --write --eslint-config-path .eslintrc './+(src|api)/**/*.js'",
     "lint": "eslint -c .eslintrc src",
-    "test": "bnr test",
-    "test-node": "bnr test-node",
-    "lighthouse-report": "lighthouse http://localhost:8080 --view",
-    "docker-build": ". ./docker/build.sh",
-    "docker-dev": ". ./docker/run.dev.sh",
-    "docker-prod": ". ./docker/run.prod.sh"
-  },
-  "lint-staged": {
-    "+(src|api)/**/*.js": [
-      "prettier-eslint --write --eslint-config-path .eslintrc",
-      "eslint -c .eslintrc",
-      "git add"
-    ]
+    "start-dev": "better-npm-run start-dev",
+    "watch-client": "better-npm-run watch-client",
+    "dev": "concurrently --kill-others \"npm run watch-client\" \"npm run start-dev\"",
+    "test": "karma start"
   },
   "betterScripts": {
     "start-prod": {
@@ -63,7 +49,8 @@
       "env": {
         "NODE_PATH": "./src",
         "NODE_ENV": "development",
-        "PORT": 3000
+        "PORT": 3000,
+        "WEBPACK_DLLS": 1
       }
     },
     "watch-client": {
@@ -71,150 +58,118 @@
       "env": {
         "UV_THREADPOOL_SIZE": 100,
         "NODE_PATH": "./src",
-        "NODE_ENV": "development",
-        "PORT": 3000
+        "PORT": 3000,
+        "APIPORT": 3030,
+        "WEBPACK_DLLS": 1
       }
     },
     "build": {
-      "command": "webpack --colors --display-error-details --config=webpack/prod.config.js",
+      "command": "webpack --verbose --colors --display-error-details --config webpack/prod.config.js",
       "env": {
         "NODE_ENV": "production"
-      }
-    },
-    "test": {
-      "command": "jest src",
-      "env": {
-        "NODE_PATH": "src"
       }
     }
   },
   "dependencies": {
-    "async": "^2.1.4",
-    "axios": "^0.16.2",
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "babel-register": "^6.26.0",
-    "babel-runtime": "^6.26.0",
-    "body-parser": "^1.16.1",
-    "compression": "^1.6.2",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.15.4",
-    "express-session": "^1.15.5",
-    "feathers": "^2.0.3",
-    "feathers-authentication": "^1.0.2",
-    "feathers-authentication-client": "^0.3.3",
-    "feathers-authentication-hooks": "^0.1.3",
-    "feathers-authentication-jwt": "^0.3.1",
-    "feathers-authentication-local": "^0.4.4",
-    "feathers-authentication-oauth1": "^0.2.3",
-    "feathers-authentication-oauth2": "^0.3.1",
-    "feathers-errors": "^2.9.1",
-    "feathers-hooks": "^2.0.1",
-    "feathers-hooks-common": "^3.7.1",
-    "feathers-nedb": "^2.6.0",
-    "feathers-rest": "^1.7.3",
-    "feathers-socketio": "^2.0.0",
-    "http-proxy": "^1.16.2",
+    "babel-plugin-transform-react-display-name": "^6.3.13",
+    "babel-plugin-transform-runtime": "^6.3.13",
+    "babel-polyfill": "^6.3.14",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "babel-register": "^6.3.13",
+    "babel-runtime": "^6.3.19",
+    "body-parser": "^1.14.1",
+    "compression": "^1.6.0",
+    "express": "^4.13.3",
+    "express-session": "^1.12.1",
+    "file-loader": "^0.9.0",
+    "http-proxy": "^1.12.0",
     "is-promise": "^2.1.0",
-    "js-cookie": "^2.1.3",
-    "localforage": "^1.4.3",
-    "lru-memoize": "^1.0.1",
-    "morgan": "^1.8.1",
-    "multireducer": "^3.1.0",
-    "nedb": "^1.8.0",
-    "passport-facebook-token": "^3.3.0",
-    "pretty-error": "^2.0.2",
-    "prop-types": "^15.5.8",
-    "react": "^16.0.0",
-    "react-bootstrap": "^0.31.2",
-    "react-dom": "^16.0.0",
-    "react-helmet": "^5.0.3",
-    "react-redux": "^5.0.6",
-    "react-router": "^3.0.2",
-    "react-router-bootstrap": "^0.23.1",
-    "react-router-redux": "^4.0.8",
-    "react-router-scroll": "^0.4.1",
+    "less": "^2.5.3",
+    "less-loader": "^2.2.1",
+    "lru-memoize": "^1.0.0",
+    "morgan": "^1.7.0",
+    "multireducer": "^3.0.0",
+    "node-localstorage": "^1.3.0",
+    "piping": "^1.0.0-rc.2",
+    "pretty-error": "^2.0.0",
+    "react": "^15.1.0",
+    "react-bootstrap": "^0.30.0",
+    "react-dom": "^15.1.0",
+    "react-helmet": "^3.1.0",
+    "react-hot-loader": "^3.0.0-beta.2",
+    "react-redux": "^4.0.0",
+    "react-router": "^2.5.1",
+    "react-router-bootstrap": "^0.23.0",
+    "react-router-redux": "^4.0.0",
     "react-select": "^1.0.0-rc.10",
-    "redux": "^3.6.0",
-    "redux-auth-wrapper": "^1.0.0",
-    "redux-connect": "^6.0.0",
-    "redux-form": "^7.1.1",
-    "redux-persist": "^4.8.3",
-    "serialize-javascript": "^1.3.0",
-    "serve-favicon": "^2.3.2",
-    "socket.io": "^2.0.1",
-    "socket.io-client": "^2.0.1",
-    "superagent": "^3.8.0",
-    "verror": "^1.10.0"
+    "redux": "^3.0.4",
+    "redux-connect": "^3.0.0",
+    "redux-form": "^5.2.5",
+    "redux-persist": "^5.2.0",
+    "scroll-behavior": "^0.8.1",
+    "serialize-javascript": "^1.1.2",
+    "serve-favicon": "^2.3.0",
+    "socket.io": "^1.3.7",
+    "socket.io-client": "^1.3.7",
+    "superagent": "^2.0.0",
+    "url-loader": "^0.5.7",
+    "warning": "^3.0.0",
+    "webpack-isomorphic-tools": "^2.2.18"
   },
   "devDependencies": {
-    "babel-eslint": "^8.0.1",
-    "babel-jest": "^21.0.2",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-transform-react-jsx-source": "^6.22.0",
-    "better-npm-run": "^0.1.0",
-    "bootstrap-loader": "^2.1.0",
-    "bootstrap-sass": "^3.3.7",
-    "chai": "^4.1.1",
-    "clean-webpack-plugin": "^0.1.15",
-    "concurrently": "^3.3.0",
-    "css-loader": "^0.28.5",
-    "enzyme": "^3.1.0",
-    "eslint": "^4.4.1",
-    "eslint-config-airbnb": "^16.0.0",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.2.1",
-    "extract-text-webpack-plugin": "^3.0.1",
-    "file-loader": "^1.1.5",
-    "font-awesome": "^4.7.0",
-    "happypack": "^4.0.0",
-    "html-webpack-plugin": "^2.30.1",
-    "husky": "^0.14.3",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^21.1.0",
-    "jest-cli": "^21.1.0",
-    "less": "^3.0.0-alpha.3",
-    "less-loader": "^4.0.3",
-    "lighthouse": "^2.4.0",
-    "lint-staged": "^4.0.3",
-    "mocha": "^4.0.1",
-    "node-sass": "^4.5.0",
-    "piping": "^1.0.0-rc.4",
-    "postcss": "^6.0.9",
-    "postcss-browser-reporter": "^0.5.0",
-    "postcss-cssnext": "^3.0.2",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.5",
-    "postcss-reporter": "^5.0.0",
-    "postcss-url": "^7.1.2",
-    "prettier-eslint-cli": "^4.3.2",
+    "autoprefixer-loader": "^3.1.0",
+    "babel-eslint": "^6.0.4",
+    "babel-plugin-typecheck": "^3.6.0",
+    "better-npm-run": "^0.0.11",
+    "bootstrap-sass": "^3.3.5",
+    "bootstrap-sass-loader": "^1.0.9",
+    "chai": "^3.3.0",
+    "clean-webpack-plugin": "^0.1.6",
+    "concurrently": "^2.1.0",
+    "css-loader": "^0.23.1",
+    "eslint": "^3.2.0",
+    "eslint-config-airbnb": "^10.0.0",
+    "eslint-loader": "^1.0.0",
+    "eslint-plugin-import": "^1.8.1",
+    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "eslint-plugin-react": "^6.0.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "font-awesome": "^4.4.0",
+    "font-awesome-webpack": "^0.0.4",
+    "happypack": "^2.1.1",
+    "json-loader": "^0.5.4",
+    "karma": "^1.0.0",
+    "karma-cli": "^1.0.0",
+    "karma-mocha": "^1.0.1",
+    "karma-mocha-reporter": "^2.0.4",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.5",
+    "karma-webpack": "^1.7.0",
+    "mocha": "^3.0.2",
+    "node-sass": "^3.4.2",
+    "phantomjs-polyfill": "^0.0.2",
+    "phantomjs-prebuilt": "^2.1.7",
     "react-a11y": "^0.3.3",
-    "react-addons-test-utils": "^15.4.2",
-    "react-hot-loader": "^3.0.0-beta.3",
-    "react-to-html-webpack-plugin": "^2.2.0",
-    "redux-devtools": "^3.3.2",
-    "redux-devtools-dock-monitor": "^1.1.1",
-    "redux-devtools-log-monitor": "^1.2.0",
-    "resolve-url-loader": "^2.0.2",
-    "sass-loader": "^6.0.1",
-    "sinon": "^4.0.1",
-    "style-loader": "^0.19.0",
-    "sw-precache-webpack-plugin": "^0.11.3",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.7.1",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-hot-middleware": "^2.17.0",
-    "webpack-isomorphic-tools": "^3.0.2"
+    "react-addons-test-utils": "^15.1.0",
+    "redux-devtools": "^3.0.0-beta-3",
+    "redux-devtools-dock-monitor": "^1.0.0-beta-3",
+    "redux-devtools-log-monitor": "^1.0.0-beta-3",
+    "sass-loader": "^4.0.0",
+    "sinon": "^1.17.2",
+    "strip-loader": "^0.1.0",
+    "style-loader": "^0.13.0",
+    "timekeeper": "^0.1.1",
+    "webpack": "^1.12.9",
+    "webpack-dev-middleware": "^1.4.0",
+    "webpack-hot-middleware": "^2.5.0"
   },
   "engines": {
-    "node": ">=5.6.0"
+    "node": "5.6.0"
   }
 }
